objects/sf4twitter__Twitter_Scheduler__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Facebook_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facebook Page</label>
        <referenceTo>sf4twitter__Fcbk_Page__c</referenceTo>
        <relationshipName>Twitter_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Last_Run_Time__c</fullName>
        <description>On Search page, show the last time the scheduled search was run</description>
        <label>Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Period_Time__c</fullName>
        <label>Period Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Twitter_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Account</label>
        <referenceTo>sf4twitter__Twitter_Account__c</referenceTo>
        <relationshipName>Twitter_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Twitter Search</label>
        <referenceTo>sf4twitter__Twitter_Search__c</referenceTo>
        <relationshipName>Twitter_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__jobId__c</fullName>
        <label>Job Ids</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Twitter Scheduler</label>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Twitter Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>